--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.5"
+    "path": "^0.12.7",
+    "pg": "^8.11.5",
+    "url": "^0.11.3"
   }
 }
