--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.3",
-    "jquery": "^3.7.1",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "fortawesome": "^0.0.1-security",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
